--- a/{{ cookiecutter.repo_name }}/notebooks/general_notebook_template.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/general_notebook_template.ipynb
@@ -1,12 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "__Date:__  \n",
-    "__Author:__ simone codeluppi   \n",
-    "__Purpose:__"
+    "---\n",
+    "title:\n",
+    "author:\n",
+    "date: \"\"\n",
+    "format:\n",
+    "  html:\n",
+    "    code-fold: true\n",
+    "---"
    ]
   },
   {
@@ -52,6 +57,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the gui depending on which system you are using\n",
+    "# %gui osx"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "nteract": {
@@ -63,20 +78,20 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "import logging\n",
-    "import quilt3\n",
-    "from pathlib import Path"
+    "# Import logger from the installed development package\n",
+    "# from package_name.logger_utils import formatted_logger\n",
+    "\n",
+    "from time import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.basicConfig(level=logging.INFO)\n",
-    "logger = logging.getLogger()"
+    "# Get the date tag to use for saving output etc.\n",
+    "date_tag = time.strftime(\"%y%m%d_%H_%M_%S\")"
    ]
   },
   {
@@ -92,13 +107,6 @@
    "source": [
     "This is where you can summarize the results. Spend time to make visualization if it makes explaining the results easier."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -127,7 +135,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('Esper')",
    "language": "python",
    "name": "python3"
   },
@@ -141,10 +149,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.12"
   },
   "nteract": {
    "version": "0.28.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c0011119e33a4a781e0cb661d2dfed0c4d7049df06830ab36e751c98c6f43d11"
+   }
   }
  },
  "nbformat": 4,
