fixed the logging component

--- a/{{ cookiecutter.repo_name }}/notebooks/general_notebook_template.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/general_notebook_template.ipynb
@@ -79,7 +79,9 @@
    "outputs": [],
    "source": [
     "# Import logger from the installed development package\n",
-    "# from package_name.logger_utils import formatted_logger\n",
+    "# and initialise it\n",
+    "# from package_name._logger_utils import init_logger\n",
+    "# logger = init_logger()\n",
     "\n",
     "from time import time"
    ]
